# acpid

./: .gitignore  Changelog  Makefile  Makefile.am  Makefile.in  README  TESTPLAN  TODO  aclocal.m4  acpi_listen.8  acpi_listen.c  acpid.8  acpid.c  acpid.h  config.h.in  configure  configure.ac  connection_list.c  connection_list.h  event.c  event.h  inotify_handler.c  input_layer.c  libnetlink.c  log.h  netlink.c  proc.c  project.config  sock.c  sock.h  ud_socket.c
kacpimon/: Makefile.am  Makefile.in  acpi_ids.c  connection_list.c  connection_list.h  input_layer.c  kacpimon  kacpimon.8  kacpimon.c  libnetlink.c  makefile  netlink.c
